feat : finish main code
