# docs/swagger.json
@@ -16,9 +16,68 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/api/v1",
+    "basePath": "/",
     "paths": {
-        "/customer/login": {
+        "/api/v1/customer/payment": {
+            "post": {
+                "description": "Customer payment reduces balance and send to merchant",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Customer Payment to Merchant",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Payment Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PaymentRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "payment successful",
+                        "schema": {
+                            "$ref": "#/definitions/dto.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/v1/auth/login": {
             "post": {
                 "description": "Logs in a user and returns access and refresh tokens",
                 "consumes": [
@@ -70,7 +129,7 @@
                 }
             }
         },
-        "/customer/logout": {
+        "/user/v1/auth/logout": {
             "post": {
                 "description": "Logs out a user by invalidating the token",
                 "consumes": [
@@ -114,7 +173,7 @@
                 }
             }
         },
-        "/customer/refresh-token": {
+        "/user/v1/auth/refresh-token": {
             "post": {
                 "description": "Generates a new access token using a refresh token",
                 "consumes": [
@@ -178,6 +237,21 @@
                 },
                 "status": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.PaymentRequest": {
+            "type": "object",
+            "required": [
+                "amount",
+                "merchant_id"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "merchant_id": {
+                    "type": "string"
                 }
             }
         },
